[gd_scene load_steps=17 format=3 uid="uid://kbotihfercfb"]

[ext_resource type="Script" path="res://scripts/level_8.gd" id="1_7kgwh"]
[ext_resource type="PackedScene" uid="uid://bkpuw7t2myv2b" path="res://scenes/tile_map.tscn" id="1_gg4wr"]
[ext_resource type="PackedScene" uid="uid://dl5ayp7fe1v6b" path="res://scenes/player.tscn" id="2_7ng5c"]
[ext_resource type="PackedScene" uid="uid://bj2kfy31qak10" path="res://scenes/hud.tscn" id="3_ht4qm"]
[ext_resource type="Texture2D" uid="uid://djk840sorg5ub" path="res://mystic_woods_free_2.1 use/sprites/objects/chest_01.png" id="4_vvdb6"]
[ext_resource type="Texture2D" uid="uid://dpux8xh3d6ujb" path="res://FREE RPG Icon Pack - 100+ Accessories and Armor - Clockwork Raven Studios/icons64x64.png" id="6_1ht7k"]
[ext_resource type="PackedScene" uid="uid://cpxe4vse68eos" path="res://scenes/goblin.tscn" id="7_6kka4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bloaj"]
atlas = ExtResource("4_vvdb6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_asjx8"]
atlas = ExtResource("4_vvdb6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p0s8p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bloaj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asjx8")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yv7c"]
size = Vector2(14, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_v32u2"]
radius = 42.107

[sub_resource type="AtlasTexture" id="AtlasTexture_bqm8b"]
atlas = ExtResource("6_1ht7k")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvot4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqm8b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vhvc"]
size = Vector2(64, 47.1579)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_guvec"]
size = Vector2(108, 20)

[node name="level_8" type="Node2D"]
script = ExtResource("1_7kgwh")

[node name="TileMap" parent="." instance=ExtResource("1_gg4wr")]
layer_0/tile_data = PackedInt32Array(65533, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 1, 0, 655358, 1, 0, 720894, 1, 0, 786430, 1, 0, 851966, 1, 0, 917503, 1, 0, 983039, 1, 0, 1048575, 1, 0, 1114111, 1, 0, 1179647, 1, 0, 1245183, 1, 0, 1114110, 1, 0, 1048574, 1, 0, 983038, 1, 0, 917502, 1, 0, 851965, 1, 0, 917501, 1, 0, 983037, 1, 0, 1048573, 1, 0, 1114109, 1, 0, 1179646, 1, 0, 1245182, 1, 0, 1310718, 1, 0, 1310719, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1245212, 1, 0, 1179676, 1, 0, 1114140, 1, 0, 1048604, 1, 0, 983068, 1, 0, 917533, 1, 0, 851997, 1, 0, 786461, 1, 0, 720925, 1, 0, 655389, 1, 0, 589853, 1, 0, 524317, 1, 0, 458781, 1, 0, 393245, 1, 0, 327709, 1, 0, 262173, 1, 0, 196636, 1, 0, 131100, 1, 0, 65564, 1, 0, 29, 1, 0, -65507, 1, 0, -65508, 1, 0, -65509, 1, 0, -65510, 1, 0, -65511, 1, 0, -131048, 1, 0, -131049, 1, 0, -131050, 1, 0, -131051, 1, 0, -131052, 1, 0, -131053, 1, 0, -131054, 1, 0, -131055, 1, 0, -196592, 1, 0, -196593, 1, 0, -262130, 1, 0, -262131, 1, 0, -262132, 1, 0, -327669, 1, 0, -327670, 1, 0, -327671, 1, 0, -393208, 1, 0, -393209, 1, 0, -393210, 1, 0, -393211, 1, 0, -327676, 1, 0, -327677, 1, 0, -262142, 1, 0, -196607, 1, 0, -196608, 1, 0, -131073, 1, 0, -65538, 1, 0, -2, 1, 0, 720909, 131072, 1, 655373, 131072, 1, 589837, 131072, 1, 524301, 131072, 1, 458765, 131072, 1, 393229, 131072, 1, 327693, 131072, 1, 262157, 131072, 1, 196621, 131072, 1, 131085, 131072, 1, 65549, 131072, 0, 13, 1, 0, -65523, 1, 0, -131059, 1, 0, -196595, 1, 0, -196596, 1, 0, -196597, 1, 0, -262133, 1, 0, -262134, 1, 0, -262135, 1, 0, -262136, 1, 0, -327672, 1, 0, -327673, 1, 0, -327674, 1, 0, -327675, 1, 0, -262139, 1, 0, -262140, 1, 0, -262141, 1, 0, -196605, 1, 0, -196606, 1, 0, -131070, 1, 0, -131071, 1, 0, -131072, 1, 0, -65537, 1, 0, -1, 1, 0, 65535, 1, 0, 65534, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 1, 0, 786431, 1, 0, 851967, 1, 0, 786432, 1, 0, 720896, 1, 0, 655360, 1, 0, 589824, 1, 0, 524288, 1, 0, 458752, 1, 0, 393216, 1, 0, 327680, 1, 0, 262144, 1, 0, 196608, 1, 0, 131072, 1, 0, 65536, 1, 0, 0, 1, 0, -65536, 1, 0, -65535, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1114113, 1, 0, 1048577, 1, 0, 983041, 1, 0, 917505, 1, 0, 917506, 1, 0, 851970, 1, 0, 786434, 1, 0, 720898, 1, 0, 655362, 1, 0, 589826, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 1, 0, 327682, 1, 0, 262146, 1, 0, 196610, 1, 0, 131074, 1, 0, 65538, 1, 0, 2, 1, 0, -65534, 1, 0, -65533, 1, 0, -131069, 1, 0, -131068, 1, 0, -196604, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, -65532, 1, 0, 4, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 917507, 1, 0, 983043, 1, 0, 983042, 1, 0, 1048578, 1, 0, 1114114, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1114115, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 983044, 1, 0, 917508, 1, 0, 851972, 1, 0, 786436, 1, 0, 720900, 1, 0, 655364, 1, 0, 589828, 1, 0, 524292, 1, 0, 458756, 1, 0, 393220, 1, 0, 327684, 1, 0, 262148, 1, 0, 196612, 1, 0, 131076, 1, 0, 65540, 1, 0, 65541, 1, 0, 5, 1, 0, 6, 1, 0, -65530, 1, 0, -131066, 1, 0, -196602, 1, 0, -262138, 1, 0, -262137, 1, 0, -196601, 1, 0, -131065, 1, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 65542, 1, 0, 131078, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 851973, 1, 0, 917509, 1, 0, 983045, 1, 0, 1048581, 1, 0, 1114117, 1, 0, 1114116, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1114118, 1, 0, 1048582, 1, 0, 983046, 1, 0, 917510, 1, 0, 851974, 1, 0, 786438, 1, 0, 720902, 1, 0, 655366, 1, 0, 589830, 1, 0, 524294, 1, 0, 458758, 1, 0, 393222, 1, 0, 327686, 1, 0, 262150, 1, 0, 196614, 1, 0, 196615, 1, 0, 131079, 1, 0, 131080, 1, 0, 65544, 1, 0, 8, 1, 0, -65528, 1, 0, -131064, 1, 0, -196600, 1, 0, -196599, 1, 0, -131063, 1, 0, -65527, 1, 0, 9, 1, 0, 65545, 65536, 0, 131081, 65536, 1, 196617, 65536, 1, 196616, 1, 0, 262152, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 917511, 1, 0, 983047, 1, 0, 1048583, 1, 0, 1114119, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1114120, 1, 0, 1048584, 1, 0, 983048, 1, 0, 917512, 1, 0, 851976, 1, 0, 786440, 1, 0, 720904, 1, 0, 655368, 1, 0, 589832, 1, 0, 524296, 1, 0, 458760, 1, 0, 393224, 1, 0, 327688, 1, 0, 327689, 65536, 1, 262153, 65536, 1, 262154, 131072, 1, 196618, 131072, 1, 131082, 131072, 1, 65546, 131072, 0, 10, 1, 0, -65526, 1, 0, -131062, 1, 0, -196598, 1, 0, -131061, 1, 0, -65525, 1, 0, 11, 1, 0, 65547, 131072, 0, 131083, 131072, 1, 196619, 131072, 1, 262155, 131072, 1, 327691, 131072, 1, 327690, 131072, 1, 393226, 131072, 1, 393225, 65536, 1, 458761, 65536, 1, 524297, 65536, 1, 589833, 65536, 1, 655369, 65536, 1, 720905, 65536, 1, 786441, 65536, 1, 851977, 65536, 1, 917513, 65536, 1, 983049, 65536, 1, 1048585, 65536, 1, 1114121, 65536, 1, 1179657, 65536, 1, 1179658, 131072, 1, 1114122, 131072, 1, 1048586, 131072, 1, 983050, 131072, 1, 917514, 131072, 1, 851978, 131072, 1, 786442, 131072, 1, 720906, 131072, 1, 655370, 131072, 1, 589834, 131072, 1, 524298, 131072, 1, 458762, 131072, 1, 458763, 131072, 1, 393227, 131072, 1, 393228, 131072, 1, 327692, 131072, 1, 262156, 131072, 1, 196620, 131072, 1, 131084, 131072, 1, 65548, 131072, 0, 12, 1, 0, -65524, 1, 0, -131060, 1, 0, 458764, 131072, 1, 524300, 131072, 1, 524299, 131072, 1, 589835, 131072, 1, 655371, 131072, 1, 720907, 131072, 1, 786443, 131072, 1, 851979, 131072, 1, 917515, 131072, 1, 983051, 131072, 1, 1048587, 131072, 1, 1114123, 131072, 1, 1179659, 131072, 1, 1179660, 131072, 1, 1114124, 131072, 1, 1048588, 131072, 1, 983052, 131072, 1, 917516, 131072, 1, 851980, 131072, 1, 786444, 131072, 1, 720908, 131072, 1, 655372, 131072, 1, 589836, 131072, 1, 786445, 131072, 1, 851981, 131072, 1, 917517, 131072, 1, 983053, 131072, 1, 1048589, 131072, 1, 1114125, 131072, 1, 1179661, 131072, 1, 1245197, 1, 0, 1245198, 1, 0, 1179662, 131072, 1, 1114126, 131072, 1, 1048590, 131072, 1, 983054, 131072, 1, 917518, 131072, 1, 851982, 131072, 1, 786446, 131072, 1, 720910, 131072, 1, 655374, 131072, 1, 589838, 131072, 1, 524302, 131072, 1, 458766, 131072, 1, 393230, 131072, 1, 327694, 131072, 1, 262158, 131072, 1, 196622, 131072, 1, 131086, 131072, 1, 65550, 131072, 0, 14, 1, 0, -65522, 1, 0, -131058, 1, 0, -196594, 1, 0, -131057, 1, 0, -65521, 1, 0, 15, 1, 0, 65551, 196608, 0, 131087, 196608, 1, 196623, 196608, 1, 262159, 196608, 1, 327695, 196608, 1, 393231, 196608, 1, 458767, 196608, 1, 524303, 196608, 1, 589839, 196608, 1, 655375, 196608, 1, 720911, 196608, 1, 786447, 196608, 1, 851983, 196608, 1, 917519, 196608, 1, 983055, 196608, 1, 1048591, 196608, 1, 1114127, 196608, 1, 1179663, 196608, 1, 1245199, 1, 0, 1245200, 1, 0, 1179664, 1, 0, 1114128, 1, 0, 1048592, 1, 0, 983056, 1, 0, 917520, 1, 0, 851984, 1, 0, 786448, 1, 0, 720912, 1, 0, 655376, 1, 0, 589840, 1, 0, 524304, 1, 0, 458768, 1, 0, 393232, 1, 0, 327696, 1, 0, 262160, 1, 0, 196624, 1, 0, 131088, 1, 0, 65552, 1, 0, 16, 1, 0, -65520, 1, 0, -131056, 1, 0, -65519, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 1, 0, 327697, 1, 0, 393233, 1, 0, 458769, 1, 0, 524305, 1, 0, 589841, 1, 0, 655377, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 917521, 1, 0, 983057, 1, 0, 1048593, 1, 0, 1114129, 1, 0, 1179665, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1179666, 1, 0, 1114130, 1, 0, 1048594, 1, 0, 983058, 1, 0, 917522, 1, 0, 851986, 1, 0, 786450, 1, 0, 720914, 1, 0, 655378, 1, 0, 589842, 1, 0, 524306, 1, 0, 458770, 1, 0, 393234, 1, 0, 327698, 1, 0, 262162, 1, 0, 196626, 1, 0, 131090, 1, 0, 65554, 1, 0, 18, 1, 0, -65518, 1, 0, -65517, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 917523, 1, 0, 983059, 1, 0, 1048595, 1, 0, 1114131, 1, 0, 1179667, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1179668, 1, 0, 1114132, 1, 0, 1048596, 1, 0, 983060, 1, 0, 917524, 1, 0, 851988, 1, 0, 786452, 1, 0, 720916, 1, 0, 655380, 1, 0, 589844, 1, 0, 524308, 1, 0, 458772, 1, 0, 393236, 1, 0, 327700, 1, 0, 262164, 1, 0, 196628, 1, 0, 131092, 1, 0, 65556, 1, 0, 20, 1, 0, -65516, 1, 0, -65515, 1, 0, 21, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 1, 0, 327701, 1, 0, 393237, 1, 0, 458773, 1, 0, 524309, 1, 0, 589845, 1, 0, 655381, 1, 0, 720917, 1, 0, 786453, 1, 0, 851989, 1, 0, 917525, 1, 0, 983061, 1, 0, 1048597, 1, 0, 1114133, 1, 0, 1179669, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1179670, 1, 0, 1114134, 1, 0, 1048598, 1, 0, 983062, 1, 0, 917526, 1, 0, 851990, 1, 0, 786454, 1, 0, 720918, 1, 0, 655382, 1, 0, 589846, 1, 0, 524310, 1, 0, 458774, 1, 0, 393238, 1, 0, 327702, 1, 0, 262166, 1, 0, 196630, 1, 0, 131094, 1, 0, 65558, 1, 0, 22, 1, 0, -65514, 1, 0, -65513, 1, 0, 23, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 1, 0, 327703, 1, 0, 393239, 1, 0, 458775, 1, 0, 524311, 1, 0, 589847, 1, 0, 655383, 1, 0, 720919, 1, 0, 786455, 1, 0, 851991, 1, 0, 917527, 1, 0, 983063, 1, 0, 1048599, 1, 0, 1114135, 1, 0, 1179671, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1179672, 1, 0, 1114136, 1, 0, 1048600, 1, 0, 983064, 1, 0, 917528, 1, 0, 851992, 1, 0, 786456, 1, 0, 720920, 1, 0, 655384, 1, 0, 589848, 1, 0, 524312, 1, 0, 458776, 1, 0, 393240, 1, 0, 327704, 1, 0, 262168, 1, 0, 196632, 1, 0, 131096, 1, 0, 65560, 1, 0, 24, 1, 0, -65512, 1, 0, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 1, 0, 327705, 1, 0, 393241, 1, 0, 458777, 1, 0, 524313, 1, 0, 589849, 1, 0, 655385, 1, 0, 720921, 1, 0, 786457, 1, 0, 851993, 1, 0, 917529, 1, 0, 983065, 1, 0, 1048601, 1, 0, 1114137, 1, 0, 1179673, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1179674, 1, 0, 1114138, 1, 0, 1048602, 1, 0, 983066, 1, 0, 917530, 1, 0, 851994, 1, 0, 786458, 1, 0, 720922, 1, 0, 655386, 1, 0, 589850, 1, 0, 524314, 1, 0, 458778, 1, 0, 393242, 1, 0, 327706, 1, 0, 262170, 1, 0, 196634, 1, 0, 131098, 1, 0, 65562, 1, 0, 26, 1, 0, 27, 1, 0, 65563, 1, 0, 131099, 1, 0, 196635, 1, 0, 262171, 1, 0, 327707, 1, 0, 393243, 1, 0, 458779, 1, 0, 524315, 1, 0, 589851, 1, 0, 655387, 1, 0, 720923, 1, 0, 786459, 1, 0, 851995, 1, 0, 917531, 1, 0, 983067, 1, 0, 1048603, 1, 0, 1114139, 1, 0, 1179675, 1, 0, 1245211, 1, 0, 917532, 1, 0, 851996, 1, 0, 786460, 1, 0, 720924, 1, 0, 655388, 1, 0, 589852, 1, 0, 524316, 1, 0, 458780, 1, 0, 393244, 1, 0, 327708, 1, 0, 262172, 1, 0, 28, 1, 0)
layer_2/tile_data = PackedInt32Array(917507, 2, 5, 327683, 2, 5, 131092, 2, 5, 917526, 2, 5, 589843, 524290, 6, 655366, 524290, 6, 131079, 524290, 6, 458775, 524290, 6, 655362, 655362, 7, 983058, 655362, 7, 327698, 655362, 7, 65552, 655362, 7)

[node name="Player" parent="." instance=ExtResource("2_7ng5c")]
position = Vector2(197, 262)

[node name="Hud" parent="." instance=ExtResource("3_ht4qm")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1, -1, 2, 0, 399, 0, 400, 290, 251.656, 290, 250, 308, 147, 306, 145.192, 290, -1, 290, 0, 0, -85, -1, -164, 176, -85, 365, 425, 377, 548, 234, 458, -64, 10, -46)

[node name="box" type="AnimatedSprite2D" parent="."]
position = Vector2(194, 51)
sprite_frames = SubResource("SpriteFrames_p0s8p")

[node name="box collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box collision"]
position = Vector2(194, 52)
shape = SubResource("RectangleShape2D_1yv7c")

[node name="box_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box_area"]
position = Vector2(194, 51)
shape = SubResource("CircleShape2D_v32u2")

[node name="chest" type="AnimatedSprite2D" parent="."]
position = Vector2(-163, 20)
scale = Vector2(0.203125, 0.195313)
sprite_frames = SubResource("SpriteFrames_qvot4")
metadata/_edit_group_ = true

[node name="chest_pickup" type="Area2D" parent="chest"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest/chest_pickup"]
position = Vector2(0, 1.68421)
shape = SubResource("RectangleShape2D_0vhvc")

[node name="level_6_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_6_transition"]
position = Vector2(200, 301)
shape = SubResource("RectangleShape2D_guvec")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 109.0
offset_top = 61.0
offset_right = 296.0
offset_bottom = 84.0
text = "+25% damage reduction"

[node name="Goblin" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(621, 112)

[node name="Goblin2" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(-251, 239)

[node name="Goblin3" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(-338, 357)

[node name="Goblin4" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(687, 241)

[node name="Goblin5" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(-85, 447)

[node name="Goblin6" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(-275, 107)

[node name="Goblin7" parent="." instance=ExtResource("7_6kka4")]
position = Vector2(257, 480)

[connection signal="body_entered" from="box_area" to="." method="_on_box_area_body_entered"]
[connection signal="body_exited" from="box_area" to="." method="_on_box_area_body_exited"]
[connection signal="body_entered" from="chest/chest_pickup" to="." method="_on_chest_pickup_body_entered"]
[connection signal="body_entered" from="level_6_transition" to="." method="_on_level_6_transition_body_entered"]
